# bigdata--course

./: .env.example  .gitignore  Codex开发Prompt_MVP_OCR_DeepSeek版.md  README.md  _first_iteration_template.pptx  pyproject.toml  start.bat  start.ps1  第一次迭代汇报.pptx  第一次迭代汇报_创新创业教学智能体.pptx
data/: interrogation_strategies.yaml  ontology.yaml  rubric.yaml
data/case_library/: SCHEMA.md  structured_cases.jsonl
data/cases/: manifest.csv
data/examples/: project_inputs.jsonl
data/hyper_rules/: H1.yaml  H10.yaml  H11.yaml  H12.yaml  H13.yaml  H14.yaml  H15.yaml  H16.yaml  H17.yaml  H18.yaml  H19.yaml  H2.yaml  H20.yaml  H21.yaml  H22.yaml  H23.yaml  H4.yaml  H5.yaml  H8.yaml  H9.yaml
outputs/cases/: chunks.jsonl  pages.jsonl
outputs/projects/: D002.json  D004.json  p1.json  实验项目一.json
scripts/: build_constraint_graph.py  build_first_iteration_ppt.py  build_knowledge_graph.py  case_library_manager.py  demo_cli.py  ingest_case_sources.py  ingest_pdfs.py
src/: __init__.py
src/app/: api.py  main.py
src/core/: __init__.py  case_library.py  chat_agent.py  coach_agent.py  constraint_graph.py  env_utils.py  evidence.py  (+17 more)
tests/: test_asset_precheck.py  test_case_library.py  test_chat_agent.py  test_constraint_graph.py  test_evidence_formatting.py  test_finance_agent.py  test_hypergraph_validator.py  test_hypergraph_visuals.py  test_idea_agent.py  test_knowledge_graph.py  test_learning_agent.py  test_ocr_ingest_smoke.py  test_pipeline_smoke.py  test_plan_export.py  test_pressure_trace.py  test_rules.py  test_runtime_log.py  test_stage_subgraphs.py  test_ui_auth.py
(+18 files in other folders)
